[tool.poetry]
name = "egghead"
version = "1.0.4"
description = "Browser history replacement that doesn't suck eggs."
authors = ["cfeenstra67 <cameron.l.feenstra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.2"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
