[tool.poetry]
name = "egghead"
version = "2.0.1"
description = "Browser history replacement that doesn't suck eggs."
authors = ["cfeenstra67 <cameron.l.feenstra@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
certifi = ">=2023.7.22"
urllib3 = ">=1.26.18"
pygments = ">=2.15.0"
requests = ">=2.31.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.2"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
