[project]
name = "egghead"
version = "2.0.1"
description = "Browser history replacement that doesn't suck eggs."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "certifi>=2025.1.31",
    "pygments>=2.19.1",
    "requests>=2.32.3",
    "sphinx>=8.1.3",
    "sphinx-material>=0.0.36",
    "urllib3>=2.3.0",
    "sphinxawesome-theme>=5.3.2",
]
